--- a/src/styles.css
+++ b/src/styles.css
@@ -83,10 +83,10 @@ mat-slide-toggle {
 	width: 100%;
 }
 
-.bg {
+/* .bg {
   background: url('./assets/image/library.png') no-repeat center center fixed;
   background-size: cover;
   width: 100%;
   height: 100%;
   z-index:-3;
-}
+} */
