Added Payment, Shipping and Book List functionality
Added the components, templates and services

--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -7,12 +7,12 @@
     </div>
 
     <div class="col-xs-4">
-      <img src="../../../assets/image/logo.jpeg" class="img-responsive right" style="width:320px; height:370px; margin-top: 5px; margin-bottom: 5px;  position:relative; z-index: 2;" />
+      <img src="../../../assets/image/logo.jpeg" class="img-responsive right" style="width:320px; height:370px; margin-top: 5px; margin-bottom: 5px;  position: relative; z-index: 2;" />
     </div>
     <img src="../../../assets/image/book_shelf.jpg" class="img-responsive right" style="width: 90%; height: 40%; position: absolute; margin-top: 20px; z-index: 1;" />
   </div>
 
-  <hr style="position: absolute; width:88%; height:6px; background-color: white; z-index:2; margin-top: -400px;" />
+  <hr style="position: absolute; width:88%; height:6px; background-color: black; z-index:2; margin-top: -400px;" />
 
   <div class="row" style="margin-top: 50px">
     <div class="col-xs-3">
@@ -22,7 +22,7 @@
       <div class="panel-group">
         <div class="panel panel-default panel-faq" style="border: none;">
 
-          <div class="panel-body" style="background-color: rgb(146, 112, 63); margin-top:20px;">
+          <div class="panel-body" style="background-color: #a19696ab; margin-top:20px;">
             <mat-tab-group>
               <mat-tab label="Login">
                 <div style="margin-top:20px;">
