--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
     <div id="navbar">
       <ul class="nav navbar-nav navbar-left">
         <li>
-          <a mat-button routerLink="/booklist">BOOK</a>
+          <a mat-button routerLink="/bookList">BOOK</a>
         </li>
         <form (ngSubmit)="onSearchByTitle" class="navbar-form">
           <div class="form-group">
