--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-8">
       <div class="col-xs-8">
-        <h2 class="section-headline" style="position:relative; z-index: 3"><span>My Account</span></h2>
+        <h2 class="section-headline" style="position:relative; z-index: 3"><span>Book Shelf</span></h2>
       </div>
     </div>
 
@@ -11,6 +11,9 @@
     </div>
     <img src="../../../assets/image/book_shelf.jpg" class="img-responsive right" style="width: 90%; height: 40%; position: absolute; margin-top: 20px; z-index: 1;" />
   </div>
+
+  <hr style="position: absolute; width:88%; height:6px; background-color: white; z-index:2; margin-top: -400px;" />
+  <hr />
 
   <div class="row" style="margin-top: 30px;">
     <div class="col-md-3"></div>
