--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -55,8 +55,8 @@
                 <a (click)="onSelect(book)" style="cursor:pointer;"><span>{{book.format | uppercase}}</span></a>
                 <span>{{book.numberOfPages}}</span><span> pages</span>
                 <br />
-                <a (click)="onSelect(book)"><span style="font-size: x-large; color:#db3208">$<span>{{book.ourPrice | number : '1.2-2'}}</span></span></a>
-                <span style="text-decoration:line-through;">$<span>{{book.listPrice | number : '1.2-2'}}</span></span>
+                <a (click)="onSelect(book)"><span style="font-size: x-large; color:#db3208">€<span>{{book.ourPrice | number : '1.2-2'}}</span></span></a>
+                <span style="text-decoration:line-through;">€<span>{{book.listPrice | number : '1.2-2'}}</span></span>
                 <p>{{book.description | slice:0:500}}</p>
               </div>
             </div>
