--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -75,11 +75,11 @@
       </div>
       <div class="row">
         <hr />
+        <h4 class="col-xs-12 text-right">
+          <strong style="font-size: large">Total Price (<span>{{cartItemNumber}}</span> items): </strong>
+          <span style="color:#db3208;font-size: large"> € <span>{{shoppingCart.grandTotal}}</span></span> 
+        </h4>
       </div>
-      <h4 class="col-xs-12 text-right"><strong style="font-size: large">Total Price (<span>{{cartItemNumber}}</span>
-          items): </strong>
-        <!-- <span style="color:#db3208;font-size: large"> €<span>{{shoppingCart.grandTotal}}</span></span> -->
-      </h4>
     </div>
   </div>
 </div>
