Added order, payment, shopping cart, order summary and search book
Added necessary components, services, models and views

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -13,9 +13,9 @@
         <li>
           <a mat-button routerLink="/bookList">BOOK</a>
         </li>
-        <form (ngSubmit)="onSearchByTitle" class="navbar-form">
+        <form (ngSubmit)="onSearchByTitle()" class="navbar-form">
           <div class="form-group">
-            <input type="text" name="SearchByTitle" (ngModel)="keyboard" class="form-control" placeholder="Book Ttitle" />
+            <input type="text" name="searchByTitle" [(ngModel)]="keyword" class="form-control" placeholder="Book Ttitle" />
           </div>
           <button type="submit" class="btn btn-default">Search</button>
         </form>
