--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -22,7 +22,7 @@
           <a mat-raised-button class="mat-warn" routerLink="/bookList">Continue Shopping</a>
         </div>
         <div class="col-xs-6 text-right">
-          <a mat-raised-button class="mat-warn" routerLink="/bookList">Check Out</a>
+          <a mat-raised-button class="mat-warn" routerLink="/checkout">Check Out</a>
         </div>
       </div>
       <br />
